# Tutorial-Kafka-Python

./: avro.py  avro_handler.py  consumer.py  producer.py  pyproject.toml  requirements.txt
avro/: avro-SKDB.public.sdcocdmst.avro
avro/schema/: schema-SKDB.public.sdcocdmst.json  schema-SKDB.public.sdmcobilccl.json  schema-SKDB.public.sdmconikeil.json  schema-SKDB.public.sdmstmkt.json
data/: sample_2.json
dev/: Dockerfile
dev/nginx/: Dockerfile  nginx.conf
dev/runtime/: Dockerfile
